--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,7 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+    namespace "io.codemagic.dtrdic4"
     defaultConfig {
         applicationId "io.codemagic.dtrdic4"
         minSdkVersion rootProject.ext.minSdkVersion
