--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -21,7 +21,6 @@ workflows:
             script: |
               LATEST_GOOGLE_PLAY_BUILD_NUMBER=$(google-play get-latest-build-number --package-name "$PACKAGE_NAME")
               if [ -z LATEST_BUILD_NUMBER ]; then
-                # fallback in case no build number was found from google play. Alternatively, you can `exit 1` to fail the build
                 UPDATED_BUILD_NUMBER=$BUILD_NUMBER
               else
                 UPDATED_BUILD_NUMBER=$(($LATEST_GOOGLE_PLAY_BUILD_NUMBER + 1))
@@ -39,3 +38,7 @@ workflows:
             notify:
               success: true
               failure: false
+          google_play:
+            credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+            track: internal
+            submit_as_draft: true
