--- a/app.json
+++ b/app.json
@@ -1,16 +1,4 @@
 {
-  "expo": {
-    "name": "codemagicSample",
-    "slug": "codemagicSample",
-    "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "bundleIdentifier": "io.codemagic.dtrdic4"
-    },
-    "android": {
-      "package": "io.codemagic.dtrdic4"
-    }
-  }
+  "name": "awesomeproject2",
+  "displayName": "awesomeproject2"
 }
