--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
     react-native-android:
         name: React native android
         max_build_duration: 120
-        instance_type: mac_mini_m1
+        instance_type: mac_pro
         environment:
           android_signing:
             - davidKeystore
@@ -20,6 +20,9 @@ workflows:
             source: false
           - pattern: "dev"
             include: true
+        cache:
+            cache_paths:
+                - $CM_BUILD_DIR/node_modules
         scripts:
           - name: Install npm dependencies
             script: | 
